[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/LevelMenu.gd" type="Script" id=1]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
list = [ "res://Level/Template/PrepareTemplate.tscn", "res://World.tscn", "res://World2.tscn", "res://Level/Template/PlatingTemplate.tscn", "res://Level/Template/CookingTemplate.tscn" ]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -237.0
margin_bottom = 266.0

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 49.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 53.0
margin_right = 298.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="VScrollBar" type="VScrollBar" parent="HBoxContainer"]
margin_left = 302.0
margin_right = 314.0
margin_bottom = 503.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 318.0
margin_right = 417.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 421.0
margin_right = 912.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 491.0
margin_bottom = 99.0
size_flags_vertical = 3
text = "CHOOSE MENU"
align = 1
valign = 1

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 103.0
margin_right = 491.0
margin_bottom = 503.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3"]
margin_left = 45.5
margin_right = 445.5
margin_bottom = 400.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="AspectRatioContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer"]
margin_right = 400.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer/AspectRatioContainer"]
margin_right = 400.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Story"
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer/AspectRatioContainer"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 132.0
size_flags_horizontal = 5
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="AspectRatioContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer"]
margin_top = 136.0
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer/AspectRatioContainer2" groups=["Hidangan"]]
margin_right = 400.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Recipe"
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer/AspectRatioContainer2"]
margin_top = 51.0
margin_right = 400.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer/AspectRatioContainer2"]
margin_left = 329.0
margin_top = 244.0
margin_right = 400.0
margin_bottom = 264.0
size_flags_horizontal = 8
text = "  MULAI  "

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 916.0
margin_right = 1080.0
margin_bottom = 503.0
size_flags_horizontal = 3

[connection signal="button_up" from="HBoxContainer/VBoxContainer2/AspectRatioContainer3/VBoxContainer/AspectRatioContainer2/Button" to="." method="_on_Button_button_up"]
